--- a/css/optionals/wide-video-container.css
+++ b/css/optionals/wide-video-container.css
@@ -1,6 +1,6 @@
 /*::: Wide Video Container :::*/
 ytd-app #page-manager > ytd-browse:not([page-subtype="playlist"]) ytd-two-column-browse-results-renderer.ytd-browse {
-  margin: 10px !important;
-  box-sizing: border-box !important;
-  width: auto !important;
+  margin: 10px;
+  box-sizing: border-box;
+  width: calc(100% - 20px) !important;
 }
