--- a/css/optionals/wide-video-container.css
+++ b/css/optionals/wide-video-container.css
@@ -1,6 +1,44 @@
 /*::: Wide Video Container :::*/
-ytd-app #page-manager > ytd-browse:not([page-subtype="playlist"]) ytd-two-column-browse-results-renderer.ytd-browse {
-  margin: 10px;
+ytd-app #page-manager > ytd-browse:not([page-subtype="playlist"]):not([page-subtype="home"]) ytd-two-column-browse-results-renderer.ytd-browse {
+  margin: 10px !important;
   box-sizing: border-box;
-  width: calc(100% - 20px) !important;
+  width: calc(100% - 25px) !important;
+  max-width: none;
+}
+
+/*::: channels page rules :::*/
+ytd-app #page-manager > ytd-browse[page-subtype="channels"] ytd-two-column-browse-results-renderer.ytd-browse ytd-item-section-renderer.ytd-section-list-renderer {
+  width: calc(100% - 20px);
+  max-width: none;
+}
+
+/*::: for some reason the arrows sometimes dont show up, so now forcing them to :::*/
+ytd-app #page-manager > ytd-browse[page-subtype="channels"] ytd-two-column-browse-results-renderer.ytd-browse ytd-item-section-renderer.ytd-section-list-renderer ytd-button-renderer.yt-horizontal-list-renderer.arrow {
+  display: flex;
+  opacity: 1;
+}
+
+/*::: Fixes left side of left arrow so it's actually clickable :::*/
+#contentContainer.app-drawer[swipe-open].app-drawer::after {
+  visibility: visible;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 100%;
+  width: 0px;
+  content: "";
+}
+
+/*::: trending page rules :::*/
+ytd-app #page-manager > ytd-browse:not([page-subtype]) #grid-container.ytd-expanded-shelf-contents-renderer > .ytd-expanded-shelf-contents-renderer,
+ytd-app #page-manager > ytd-browse:not([page-subtype]) #grid-container.ytd-expanded-shelf-contents-renderer > .ytd-expanded-shelf-contents-renderer > .ytd-video-renderer {
+  max-width: 600px;
+}
+
+ytd-app #page-manager > ytd-browse:not([page-subtype]) ytd-video-renderer.ytd-expanded-shelf-contents-renderer {
+  padding-right: 15px;
+}
+
+ytd-app #page-manager > ytd-browse:not([page-subtype]) ytd-thumbnail.ytd-video-renderer {
+  margin-right: 12px;
 }
