--- a/style.user.css
+++ b/style.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name         Youtube Theater
-@version      1.2.4
+@version      1.2.5
 @description  Expands videos to fill all free space inside browser window.
 @namespace    https://github.com/StylusThemes
 @author       StylusThemes <https://github.com/StylusThemes>
@@ -32,7 +32,7 @@ WatchedBadgeN "No" <<<EOT
 
 @advanced dropdown WVC "Make the main video container on youtube wider?" {
 WVCY "Yes" <<<EOT
-ytd-app #page-manager>ytd-browse:not([page-subtype=playlist]) ytd-two-column-browse-results-renderer.ytd-browse{margin:10px;box-sizing:border-box;width:calc(100% - 20px)!important} EOT;
+ytd-app #page-manager>ytd-browse:not([page-subtype=playlist]):not([page-subtype=home]) ytd-two-column-browse-results-renderer.ytd-browse{margin:10px!important;box-sizing:border-box;width:calc(100% - 25px)!important;max-width:none}ytd-app #page-manager>ytd-browse[page-subtype=channels] ytd-two-column-browse-results-renderer.ytd-browse ytd-item-section-renderer.ytd-section-list-renderer{width:calc(100% - 20px);max-width:none}ytd-app #page-manager>ytd-browse[page-subtype=channels] ytd-two-column-browse-results-renderer.ytd-browse ytd-item-section-renderer.ytd-section-list-renderer ytd-button-renderer.yt-horizontal-list-renderer.arrow{display:flex;opacity:1}#contentContainer.app-drawer[swipe-open].app-drawer::after{visibility:visible;position:fixed;top:0;bottom:0;left:100%;width:0;content:""}ytd-app #page-manager>ytd-browse:not([page-subtype]) #grid-container.ytd-expanded-shelf-contents-renderer>.ytd-expanded-shelf-contents-renderer,ytd-app #page-manager>ytd-browse:not([page-subtype]) #grid-container.ytd-expanded-shelf-contents-renderer>.ytd-expanded-shelf-contents-renderer>.ytd-video-renderer{max-width:600px}ytd-app #page-manager>ytd-browse:not([page-subtype]) ytd-video-renderer.ytd-expanded-shelf-contents-renderer{padding-right:15px}ytd-app #page-manager>ytd-browse:not([page-subtype]) ytd-thumbnail.ytd-video-renderer{margin-right:12px} EOT;
 WVCN "No" <<<EOT
  EOT;
 }
@@ -47,7 +47,7 @@ ytd-app #page-manager>ytd-browse:not([page-subtype=playlist]){display:block}ytd-
 @-moz-document domain("youtube.com") {
   #copyright div::after {
     white-space: pre;
-    content: "\A Youtube Theater - Version 1.2.4";
+    content: "\A Youtube Theater - Version 1.2.5";
   }
 
   ::-webkit-scrollbar {
