--- a/css/theme/theme.css
+++ b/css/theme/theme.css
@@ -1,6 +1,6 @@
 #copyright div::after {
   white-space: pre;
-  content: "\A Youtube Theater - Version 1.2.6";
+  content: "\A Youtube Theater - Version 1.2.7";
 }
 
 ::-webkit-scrollbar {
@@ -22,4 +22,18 @@
 ::-webkit-scrollbar-track,
 ::-webkit-scrollbar-corner {
   background-color: #333 !important;
+}
+
+ytd-thumbnail[class="style-scope ytd-video-renderer"],
+ytd-playlist-thumbnail[class="style-scope ytd-playlist-renderer"] {
+  max-width: 225px !important;
+  max-height: 132px !important;
+}
+
+ytd-video-renderer[use-prominent-thumbs] #channel-info.ytd-video-renderer {
+  padding: 5px 0;
+}
+
+ytd-search[center-results] ytd-two-column-search-results-renderer.ytd-search {
+  padding-right: 150px;
 }
