--- a/css/optionals/stretch-video.css
+++ b/css/optionals/stretch-video.css
@@ -2,6 +2,7 @@
 video {
   position: static !important;
   width: 100% !important;
+  height: 100vh !important
   transform: scaleX(1) !important;
 
   object-fit: fill !important;
