--- a/css/theme/theme.css
+++ b/css/theme/theme.css
@@ -1,6 +1,6 @@
 #copyright div::after {
   white-space: pre;
-  content: "\A Youtube Theater - Version 1.2.7";
+  content: "\aYoutube Theater - Version 1.2.8";
 }
 
 ::-webkit-scrollbar {
