--- a/style.user.css
+++ b/style.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name         Youtube Theater
-@version      1.2.7
+@version      1.2.8
 @description  Expands videos to fill all free space inside browser window.
 @namespace    https://github.com/StylusThemes
 @author       StylusThemes <https://github.com/StylusThemes>
@@ -11,14 +11,14 @@
 
 @advanced dropdown VMaxWidth "Real Theater Mode?" {
 VMaxWidthY "Yes" <<<EOT
-ytd-app[is-watch-page] ytd-watch-flexy[theater] #player-theater-container,ytd-app[is-watch-page] ytd-watch[theater] #player{min-height:100vh!important;max-height:100vh!important}ytd-app[is-watch-page] #masthead-container{opacity:0!important;transition:opacity .2s ease-in-out}ytd-app[is-watch-page] #masthead-container:hover{opacity:1!important}ytd-app[is-watch-page] #page-manager{margin-top:0!important}ytd-app[is-watch-page] #extra-buttons{display:none!important}ytd-app[is-watch-page] #toast:not(.paper-toast-open){pointer-events:none} EOT;
+ytd-watch-flexy[theater] #player-theater-container,ytd-watch[theater] #player{min-height:100vh!important;max-height:100vh!important}#masthead-container{opacity:0!important;transition:opacity .2s ease-in-out}#masthead-container:hover{opacity:1!important}#page-manager{margin-top:0!important}#extra-buttons{display:none!important}#toast:not(.paper-toast-open){pointer-events:none} EOT;
 VMaxWidthN "No" <<<EOT
  EOT;
 }
 
 @advanced dropdown SVTFP "Stretch Video To Fill Player?" {
 SVTFPY "Yes" <<<EOT
-video{position:static!important;width:100%!important;transform:scaleX(1)!important;object-fit:fill!important} EOT;
+video{position:static!important;width:100%!important;height:100vh !important transform: scaleX(1)!important;object-fit:fill!important} EOT;
 SVTFPN "No" <<<EOT
  EOT;
 }
@@ -47,7 +47,7 @@ ytd-app #page-manager>ytd-browse:not([page-subtype=playlist]){display:block}ytd-
 @-moz-document domain("youtube.com") {
   #copyright div::after {
     white-space: pre;
-    content: "\A Youtube Theater - Version 1.2.7";
+    content: "\aYoutube Theater - Version 1.2.8";
   }
 
   ::-webkit-scrollbar {
