Youtube Theater 1.2.9 release
## v1.2.9 ... (08 JULY 21)

### Note:
`*` Change name from Youtube Theater to Youtube Tweaks

### Additions:
`+` Add option to make youtube subtitle captions more akin to netflix subtitles.

--- a/css/theme/theme.css
+++ b/css/theme/theme.css
@@ -1,6 +1,6 @@
 #copyright div::after {
   white-space: pre;
-  content: "\aYoutube Theater - Version 1.2.8";
+  content: "\aYoutube Tweaks - Version 1.2.9";
 }
 
 ::-webkit-scrollbar {
