--- a/css/usercss-template.css
+++ b/css/usercss-template.css
@@ -1,12 +1,12 @@
 /* ==UserStyle==
-@name         Youtube Theater
-@version      1.2.8
+@name         Youtube Tweaks
+@version      1.2.9
 @description  Expands videos to fill all free space inside browser window.
 @namespace    https://github.com/StylusThemes
 @author       StylusThemes <https://github.com/StylusThemes>
-@homepageURL  https://github.com/StylusThemes/YouTube-Theater
-@supportURL   https://github.com/StylusThemes/YouTube-Theater/issues/
-@updateURL    https://raw.githubusercontent.com/StylusThemes/YouTube-Theater/master/style.user.css
+@homepageURL  https://github.com/StylusThemes/YouTube-Tweaks
+@supportURL   https://github.com/StylusThemes/YouTube-Tweaks/issues/
+@updateURL    https://raw.githubusercontent.com/StylusThemes/YouTube-Tweaks/master/style.user.css
 @license      CC-BY-SA-4.0
 
 @advanced dropdown VMaxWidth "Real Theater Mode?" {
@@ -30,6 +30,13 @@ WatchedBadgeN "No" <<<EOT
  EOT;
 }
 
+@advanced dropdown NetflixSubtitles "Change youtube subtitles to be more like netflix?" {
+NetflixSubtitlesY "Yes" <<<EOT
+{{netflix-subtitles}} EOT;
+NetflixSubtitlesN "No" <<<EOT
+ EOT;
+}
+
 @advanced dropdown WVC "Make the main video container on youtube wider?" {
 WVCY "Yes" <<<EOT
 {{wide-video-container}} EOT;
@@ -47,6 +54,7 @@ FadePPCompY "Yes" <<<EOT
 @-moz-document domain("youtube.com") {
 {{theme}}
 /*[[WatchedBadge]]*/
+/*[[NetflixSubtitles]]*/
 /*[[WVC]]*/
 /*[[FadePPComp]]*/
 }
