--- a/style.user.css
+++ b/style.user.css
@@ -1,12 +1,12 @@
 /* ==UserStyle==
-@name         Youtube Theater
-@version      1.2.8
+@name         Youtube Tweaks
+@version      1.2.9
 @description  Expands videos to fill all free space inside browser window.
 @namespace    https://github.com/StylusThemes
 @author       StylusThemes <https://github.com/StylusThemes>
-@homepageURL  https://github.com/StylusThemes/YouTube-Theater
-@supportURL   https://github.com/StylusThemes/YouTube-Theater/issues/
-@updateURL    https://raw.githubusercontent.com/StylusThemes/YouTube-Theater/master/style.user.css
+@homepageURL  https://github.com/StylusThemes/YouTube-Tweaks
+@supportURL   https://github.com/StylusThemes/YouTube-Tweaks/issues/
+@updateURL    https://raw.githubusercontent.com/StylusThemes/YouTube-Tweaks/master/style.user.css
 @license      CC-BY-SA-4.0
 
 @advanced dropdown VMaxWidth "Real Theater Mode?" {
@@ -30,6 +30,13 @@ WatchedBadgeN "No" <<<EOT
  EOT;
 }
 
+@advanced dropdown NetflixSubtitles "Change youtube subtitles to be more like netflix?" {
+NetflixSubtitlesY "Yes" <<<EOT
+.ytp-caption-segment{padding-bottom:5!important;font-family:"Netflix Sans",sans-serif!important;font-weight:700!important;background:0 0!important;text-shadow:#000 0 0 .2em!important} EOT;
+NetflixSubtitlesN "No" <<<EOT
+ EOT;
+}
+
 @advanced dropdown WVC "Make the main video container on youtube wider?" {
 WVCY "Yes" <<<EOT
 ytd-app #page-manager>ytd-browse:not([page-subtype=playlist]):not([page-subtype=home]) ytd-two-column-browse-results-renderer.ytd-browse{margin:10px!important;box-sizing:border-box;width:calc(100% - 25px)!important;max-width:none}ytd-app #page-manager>ytd-browse[page-subtype=channels] ytd-two-column-browse-results-renderer.ytd-browse ytd-item-section-renderer.ytd-section-list-renderer{width:calc(100% - 20px);max-width:none}ytd-app #page-manager>ytd-browse[page-subtype=channels] ytd-two-column-browse-results-renderer.ytd-browse ytd-item-section-renderer.ytd-section-list-renderer ytd-button-renderer.yt-horizontal-list-renderer.arrow{display:flex;opacity:1}#contentContainer.app-drawer[swipe-open].app-drawer::after{visibility:visible;position:fixed;top:0;bottom:0;left:100%;width:0;content:""}ytd-app #page-manager>ytd-browse:not([page-subtype]) #grid-container.ytd-expanded-shelf-contents-renderer>.ytd-expanded-shelf-contents-renderer,ytd-app #page-manager>ytd-browse:not([page-subtype]) #grid-container.ytd-expanded-shelf-contents-renderer>.ytd-expanded-shelf-contents-renderer>.ytd-video-renderer{max-width:600px}ytd-app #page-manager>ytd-browse:not([page-subtype]) ytd-video-renderer.ytd-expanded-shelf-contents-renderer{padding-right:15px}ytd-app #page-manager>ytd-browse:not([page-subtype]) ytd-thumbnail.ytd-video-renderer{margin-right:12px} EOT;
@@ -47,7 +54,7 @@ ytd-app #page-manager>ytd-browse:not([page-subtype=playlist]){display:block}ytd-
 @-moz-document domain("youtube.com") {
   #copyright div::after {
     white-space: pre;
-    content: "\aYoutube Theater - Version 1.2.8";
+    content: "\aYoutube Tweaks - Version 1.2.9";
   }
 
   ::-webkit-scrollbar {
@@ -86,6 +93,7 @@ ytd-app #page-manager>ytd-browse:not([page-subtype=playlist]){display:block}ytd-
   }
 
   /*[[WatchedBadge]]*/
+  /*[[NetflixSubtitles]]*/
   /*[[WVC]]*/
   /*[[FadePPComp]]*/
 }
