Youtube Theater 1.2.10 release
## v1.2.10 ... (31 AUGUST 21)

### Fixes:
`+` Fix Stretch Video To Fill Player for some videos as I had missed a `;`

--- a/css/optionals/stretch-video.css
+++ b/css/optionals/stretch-video.css
@@ -2,7 +2,7 @@
 video {
   position: static !important;
   width: 100% !important;
-  height: 100vh !important
+  height: 100vh !important;
   transform: scaleX(1) !important;
 
   object-fit: fill !important;
