--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -3,3 +3,4 @@
 // theme
 @import 'partials/theme/scrollbar';
 @import 'partials/theme/small-thumbnails-on-search';
+@import 'partials/theme/fix-blankspot-from-adblock';
