--- a/style.user.css
+++ b/style.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
 @name         Youtube Tweaks
-@version      1.2.12
+@version      1.2.13
 @description  Expands videos to fill all free space inside browser window.
 @namespace    https://github.com/StylusThemes
 @author       StylusThemes <https://github.com/StylusThemes>
@@ -61,7 +61,7 @@ RemovePTSFBY "Yes" <<<EOT
 @-moz-document domain("youtube.com") {
   #copyright div::after {
     white-space: pre;
-    content: "\aYoutube Tweaks - Version 1.2.12";
+    content: "\aYoutube Tweaks - Version 1.2.13";
   }
 
   ::-webkit-scrollbar {
@@ -97,6 +97,26 @@ RemovePTSFBY "Yes" <<<EOT
 
   ytd-search[center-results] ytd-two-column-search-results-renderer.ytd-search {
     padding-right: 150px;
+  }
+
+  [page-subtype=home] ytd-rich-grid-renderer #contents ytd-rich-grid-row {
+    display: contents;
+  }
+
+  [page-subtype=home] ytd-rich-grid-renderer #contents ytd-rich-grid-row #contents {
+    display: contents;
+  }
+
+  [page-subtype=home] ytd-rich-grid-renderer #contents #contents>ytd-rich-item-renderer {
+    margin: 0 4px 24px !important;
+  }
+
+  ytd-rich-section-renderer {
+    display: none;
+  }
+
+  .ghost-grid.ytd-ghost-grid-renderer {
+    display: none;
   }
 
   /*[[WatchedBadge]]*/
