--- a/css/optionals/max-width.css
+++ b/css/optionals/max-width.css
@@ -1,33 +1,42 @@
 /*::: Max Video Player Width :::*/
 /*::: Full height player :::*/
-ytd-watch[theater] #player,
-ytd-watch-flexy[theater] #player-theater-container {
-  min-height: 100vh !important;
-  max-height: 100vh !important;
+ytd-watch-flexy[theater] #player-wide-container.ytd-watch-flexy,
+ytd-watch-flexy[fullscreen] #player-theater-container.ytd-watch-flexy {
+  height: 100vh;
+  max-height: 100vh;
+}
+
+ytd-watch-flexy:not([fullscreen])[theater] #player.ytd-watch {
+  max-height: 100vh;
+}
+
+ytd-watch[theater] #player.ytd-watch {
+  width: 100%;
+  max-height: 100vh;
 }
 
 /*::: Hide top bar :::*/
-#masthead-container {
+#masthead-container.ytd-app {
   opacity: 0 !important;
-  transition: opacity .2s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
 }
 
 /*::: Show top bar on hover :::*/
-#masthead-container:hover {
+#masthead-container.ytd-app:hover {
   opacity: 1 !important;
 }
 
 /*::: Remove top margin :::*/
-#page-manager {
-  margin-top: 0 !important;
+#page-manager.ytd-app {
+  margin-top: 0px;
 }
 
 /*::: Hide feedback and restore classic buttons :::*/
-#extra-buttons {
+#extra-buttons.ytd-app {
   display: none !important;
 }
 
 /*::: Fix toast interfering with controls :::*/
-#toast:not(.paper-toast-open) {
+#toast.ytd-app:not(.paper-toast-open) {
   pointer-events: none;
 }
