--- a/youtube-tweaks.user.styl
+++ b/youtube-tweaks.user.styl
@@ -10,13 +10,11 @@
 @preprocessor   stylus
 @license        CC-BY-SA-4.0
 
-@var select VMaxWidth "Real Theater Mode?" ["VMaxWidthY:Yes", "VMaxWidthN:No"]
-@var select SVTFP "Stretch Video To Fill Player?" ["SVTFPY:Yes", "SVTFPN:No"]
-@var select WatchedBadge "Re-Add Youtube Watched Badge?" ["WatchedBadgeY:Yes", "WatchedBadgeN:No"]
+
 ==/UserStyle== */
 @-moz-document domain("youtube.com") {
-    i=!important;
-    t=transparent;
+  i=!important;
+  t=transparent;
 
   #copyright div::after {
     white-space: pre;
@@ -44,9 +42,25 @@
     background-color: #333 i;
   }
 
-  [page-subtype=home] ytd-rich-grid-row,
-  [page-subtype=home] ytd-rich-grid-row #contents {
-    display: contents;
+  ytd-thumbnail[class="style-scope ytd-video-renderer"],
+  ytd-playlist-thumbnail[class="style-scope ytd-playlist-renderer"] {
+    max-width: 225px i;
+    max-height: 132px i;
+  }
+
+  ytd-video-renderer[use-prominent-thumbs] #channel-info.ytd-video-renderer {
+    padding: 5px 0;
+  }
+
+  ytd-search[center-results] ytd-two-column-search-results-renderer.ytd-search {
+    padding-right: 150px;
+  }
+
+  [page-subtype="home"] {
+    ytd-rich-grid-row,
+    ytd-rich-grid-row #contents {
+      display: contents;
+    }
   }
 
   ytd-rich-section-renderer,
@@ -54,22 +68,13 @@
     display: none;
   }
 
-  [page-subtype=home] #contents>ytd-rich-item-renderer:has(#content > ytd-ad-slot-renderer) {
-    display: none;
+  [page-subtype=home] {
+    #contents > ytd-rich-item-renderer:has(#content > ytd-ad-slot-renderer) {
+      display: none;
+    }
   }
-
-  /*[[DFT]]*/
-  /*[[WatchedBadge]]*/
-  /*[[WVC]]*/
-  /*[[FadePPComp]]*/
-}
-
-@-moz-document url-prefix("https://www.youtube.com/feed/subscriptions") {
-  /*[[RemovePTSFB]]*/
 }
 
 @-moz-document regexp("https?://www.youtube.com/watch.*"), regexp("https?://www.youtube.com/clip.*") {
-  /*[[NetflixSubtitles]]*/
-  /*[[SVTFP]]*/
-  /*[[VMaxWidth]]*/
+
 }
